[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "MIT"
homepage = "https://github.com/TheDhejavu/gossipod"
repository = "https://github.com/TheDhejavu/gossipod"
authors = ["Ayodeji Akinola <akinayodeji4all@gmail.com>"]

[workspace]
members = [
    "gossipod",
    "examples/*"
    # "runtime",
]
resolver = "2"

[profile.release]
debug = true

[workspace.dependencies]
# Gossipod
gossipod = { path = "./gossipod" }
# gossipod-runtime = { path = "./gossipod-runtime" }

# Serialize and Deserialize
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
bincode = "1.3"

# Error Handling
anyhow = { version = "1.0.56", features = ["backtrace"] }

# Async
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tokio-util = { version = "0.7.1", features = ["codec"] }
async-trait = "0.1.81"

# Data Structures
uuid = { version = "1.2.1", features = ["serde", "v4"] }
dashmap = "6.0.1"
parking_lot = "0.12.3"
bytes = "1.7.1"
crossbeam = "0.8.4"

# Logging and Tracing
env_logger = "0.11.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.10", features = ["env-filter"] }

# System Information
gethostname = "0.5.0"
sysinfo = "0.31.2"

# Command Line Interface
clap = { version = "4.3", features = ["derive"] }

# Misc
rand = "0.8.5"
pin-project = "1.1.5"
