[package]
name = "gossipod"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[profile.release]
debug = true

[dependencies]
# serialize and deserialize
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true

# error handling
anyhow.workspace = true

# async
tokio.workspace = true
futures.workspace = true
tokio-util.workspace = true
async-trait.workspace = true

# data Structures
uuid.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
bytes.workspace = true
crossbeam.workspace = true

# logging & tracing
env_logger.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# misc
gethostname.workspace = true
sysinfo.workspace = true
rand.workspace = true
pin-project.workspace = true